# DataManagement

./: README.md
FrontEnd/: index.html  package-lock.json  package.json
FrontEnd/app/: globals.css  page.tsx
FrontEnd/app/api/proxy/: route.ts
FrontEnd/components/: ai-chat-section.tsx  business-suggestions-section.tsx  csv-upload-section.tsx  hero-section.tsx  low-performing-section.tsx  next-buy-forecast-section.tsx  overall-sales-trend-section.tsx  pairwise-section.tsx  product-seasonal-analysis-section.tsx  top-products-section.tsx
FrontEnd/lib/: api.ts
FrontEnd/src/: App.jsx  index.css
FrontEnd/src/components/: AiChatSection.jsx  BusinessSuggestionsSection.jsx  CsvUploadSection.jsx  HeroSection.jsx  LowPerformingSection.jsx  OverallSalesTrendSection.jsx  ProductSeasonalAnalysisSection.jsx  TopProductsSection.jsx
FrontEnd/src/components/ui/: Button.jsx  Card.jsx
FrontEnd/styles/: globals.css
Pairwise/: .env  datasetgenerator.py  datasettrans.py  fetch_external_data.py  forecast.py  forecast_all.py  gemini_chat.py  holidays.csv  main.py  mcp_server.py  model_context.json  process_pos.py  pyproject.toml  smart_pair.py  smart_pairs_for_app.json  test_client.py  transaction_data_2025-2026_seasonal.csv  weather.csv
Pairwise/data/: historical_all.csv  historical_icecream.csv  historical_sales.csv  weather.csv
Pairwise/forecasts/: all_2026.json  forecast_2026_icecream.json
